THRIFT-3047 Uneven calls to indent_up and indent_down in Cocoa generator Client: Cocoa Author: Mike Riley <mikeriley@yelirekim.com>

This closes #401