compiler/cpp/src/generate/t_cocoa_generator.cc
@@ -1676,7 +1676,6 @@ void t_cocoa_generator::generate_cocoa_service_client_async_implementation(ofstr
 void t_cocoa_generator::generate_cocoa_service_server_implementation(ofstream& out,
                                                                      t_service* tservice) {
   out << "@implementation " << cocoa_prefix_ << tservice->get_name() << "Processor" << endl;
-  indent_up();
 
   // initializer
   out << endl;
@@ -1826,8 +1825,6 @@ void t_cocoa_generator::generate_cocoa_service_server_implementation(ofstream& o
   out << indent() << "[super dealloc_stub];" << endl;
   scope_down(out);
   out << endl;
-
-  indent_down();
 
   out << "@end" << endl << endl;
 }
